# img_to_spectogram

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: AudioFile.h.86E639B2C432CC2A.idx  cxxopts.hpp.4AA02CB51EDB09EF.idx  main.cpp.2E7357D3508986FD.idx  stb_image.h.5F9F3A947BDC6F3C.idx  structs.hpp.DB62C6933E2F167F.idx  ungrouped_utility_funktions.hpp.6C613A5514E4C589.idx
include/: structs.hpp  ungrouped_utility_funktions.hpp
src/: main.cpp
